--- a/src/scss/temp1.scss
+++ b/src/scss/temp1.scss
@@ -9,10 +9,14 @@ $color1 : #ffffff;
 .color2 {
   color: $color2;
 }
+.row {
+  display: flex
+}
 .col-1-2 {
   display: inline-block;
   box-sizing: border-box;
-  width: 50%;
+  width: 47%;
+
 }
 .col-1-3 {
   display: inline-block;
@@ -51,4 +55,48 @@ $color1 : #ffffff;
 .fa-envelope::before {
   display: inline-block;
   transform: rotateY(90)
+}
+.education-wrapper {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 20px;
+}
+.fa-graduation-cap {
+  margin-left: 50px;
+}
+.middle-border {
+  width: 1%;
+  margin: 0 2%;
+  background: linear-gradient(#5e9390 10% , rgb(71, 61, 61) 70%, rgb(45, 128, 134) , white );
+}
+.sub-title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 20px 0;
+  font-family: 'Righteous', cursive;
+  letter-spacing: .1rem;
+}
+.edu-add {
+  font-size: 1.3rem;
+  letter-spacing: .04rem;
+  word-spacing: .1rem;
+  margin-bottom: 5px;
+}
+.professional-exp {
+  margin: 20px 0;
+  font-size: 1.3rem;
+  font-weight: 700;
+  font-family: 'Righteous', cursive;
+}
+.company-session {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.work-desc {
+  margin-bottom: 50px;
+}
+.language {
+  display: flex;
+  justify-content: space-around;
 }
